--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,8 @@
   "devDependencies": {
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
   }
 }
